# qkabrine

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  demo.py  pyproject.toml  qkabrine_automl_demo.ipynb
docs/: api.rst  citing.rst  conf.py  examples.rst  faq.rst  getting_started.rst  index.rst  requirements.txt
qkabrine_automl/: __init__.py  ansatz.py  core.py  dynamics.py  kernels.py  search.py  utils.py
tests/: test_core.py  test_dynamics.py
